@@ -1,4 +1,4 @@
-/**
+/*
  * The contents of this file are subject to the license and copyright
  * detailed in the LICENSE and NOTICE files at the root of the source
  * tree and available online at
@@ -14,7 +14,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
-import java.io.UnsupportedEncodingException;
 import java.net.Inet4Address;
 import java.net.Inet6Address;
 import java.net.InetAddress;
@@ -55,8 +54,8 @@ import org.apache.logging.log4j.Logger;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrServerException;
+import org.apache.solr.client.solrj.impl.BaseHttpSolrClient;
 import org.apache.solr.client.solrj.impl.HttpSolrClient;
-import org.apache.solr.client.solrj.impl.HttpSolrClient.RemoteSolrException;
 import org.apache.solr.client.solrj.request.AbstractUpdateRequest;
 import org.apache.solr.client.solrj.request.ContentStreamUpdateRequest;
 import org.apache.solr.client.solrj.request.CoreAdminRequest;
@@ -113,63 +112,87 @@ import org.springframework.beans.factory.annotation.Autowired;
  */
 public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBean {
 
-    private static final Logger log = LogManager.getLogger();
-
-    private static final String MULTIPLE_VALUES_SPLITTER = "|";
-    protected SolrClient solr;
-
     public static final String DATE_FORMAT_8601 = "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'";
-
     public static final String DATE_FORMAT_DCDATE = "yyyy-MM-dd'T'HH:mm:ss'Z'";
-
-    protected DatabaseReader locationService;
-
-    protected boolean useProxies;
-
+    private static final Logger log = LogManager.getLogger();
+    private static final String MULTIPLE_VALUES_SPLITTER = "|";
     private static final List<String> statisticYearCores = new ArrayList<>();
-    private static boolean statisticYearCoresInit = false;
-
     private static final String IP_V4_REGEX = "^((?:\\d{1,3}\\.){3})\\d{1,3}$";
     private static final String IP_V6_REGEX = "^(.*):.*:.*$";
-
-    @Autowired(required = true)
+    private static boolean statisticYearCoresInit = false;
+    protected SolrClient solr;
+    protected DatabaseReader locationService;
+    protected boolean useProxies;
+    @Autowired()
     protected BitstreamService bitstreamService;
-    @Autowired(required = true)
+    @Autowired()
     protected ContentServiceFactory contentServiceFactory;
-    @Autowired(required = true)
+    /**
+     * String of IP and Ranges in IPTable as a Solr Query
+     */
+    protected String filterQuery = null;
+    @Autowired()
     private ConfigurationService configurationService;
-    @Autowired(required = true)
+    @Autowired()
     private ClientInfoService clientInfoService;
     @Autowired
     private SolrStatisticsCore solrStatisticsCore;
-
     /** URL to the current-year statistics core.  Prior-year shards will have a year suffixed. */
     private String statisticsCoreURL;
-
     /** Name of the current-year statistics core.  Prior-year shards will have a year suffixed. */
     private String statisticsCoreBase;
-
-    public static enum StatisticsType {
-        VIEW("view"),
-        SEARCH("search"),
-        SEARCH_RESULT("search_result"),
-        WORKFLOW("workflow");
-
-        private final String text;
-
-        StatisticsType(String text) {
-            this.text = text;
-        }
-
-        public String text() {
-            return text;
-        }
-    }
 
     protected SolrLoggerServiceImpl() {
 
     }
 
+    @Override
+    public void postWorkflow(UsageWorkflowEvent usageWorkflowEvent) {
+        initSolrYearCores();
+        try {
+            SolrInputDocument solrDoc = getCommonSolrDoc(usageWorkflowEvent.getObject(), null, null);
+
+            //Log the current collection & the scope !
+            solrDoc.addField("owningColl", usageWorkflowEvent.getScope().getID().toString());
+            storeParents(solrDoc, usageWorkflowEvent.getScope());
+
+            if (usageWorkflowEvent.getWorkflowStep() != null) {
+                solrDoc.addField("workflowStep", usageWorkflowEvent.getWorkflowStep());
+            }
+            if (usageWorkflowEvent.getOldState() != null) {
+                solrDoc.addField("previousWorkflowStep", usageWorkflowEvent.getOldState());
+            }
+            if (usageWorkflowEvent.getGroupOwners() != null) {
+                for (int i = 0; i < usageWorkflowEvent.getGroupOwners().length; i++) {
+                    Group group = usageWorkflowEvent.getGroupOwners()[i];
+                    solrDoc.addField("owner", "g" + group.getID().toString());
+                }
+            }
+            if (usageWorkflowEvent.getEpersonOwners() != null) {
+                for (int i = 0; i < usageWorkflowEvent.getEpersonOwners().length; i++) {
+                    EPerson ePerson = usageWorkflowEvent.getEpersonOwners()[i];
+                    solrDoc.addField("owner", "e" + ePerson.getID().toString());
+                }
+            }
+
+            solrDoc.addField("workflowItemId", usageWorkflowEvent.getWorkflowItem().getID().toString());
+
+            EPerson submitter = ((Item) usageWorkflowEvent.getObject()).getSubmitter();
+            if (submitter != null) {
+                solrDoc.addField("submitter", submitter.getID().toString());
+            }
+            solrDoc.addField("statistics_type", StatisticsType.WORKFLOW.text());
+            if (usageWorkflowEvent.getActor() != null) {
+                solrDoc.addField("actor", usageWorkflowEvent.getActor().getID().toString());
+            }
+
+            solr.add(solrDoc);
+        } catch (Exception e) {
+            //Log the exception, no need to send it through, the workflow shouldn't crash because of this !
+            log.error("Error saving WORKFLOW event to Solr", e);
+        }
+
+    }
 
     @Override
     public void afterPropertiesSet() throws Exception {
@@ -246,7 +269,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         } catch (Exception e) {
             String email = null == currentUser ? "[anonymous]" : currentUser.getEmail();
             log.error("Error saving VIEW event to Solr for DSpaceObject {} by EPerson {}",
-                      dspaceObject.getID(), email, e);
+                dspaceObject.getID(), email, e);
         }
     }
 
@@ -260,7 +283,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
 
         try {
             SolrInputDocument doc1 = getCommonSolrDoc(dspaceObject, ip, userAgent, xforwardedfor,
-                                                      currentUser);
+                currentUser);
             if (doc1 == null) {
                 return;
             }
@@ -285,7 +308,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             throw re;
         } catch (Exception e) {
             log.error("Error saving VIEW event to Solr for DSpaceObject {} by EPerson {}",
-                      dspaceObject.getID(), currentUser.getEmail(), e);
+                dspaceObject.getID(), currentUser.getEmail(), e);
         }
     }
 
@@ -296,7 +319,9 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
      * @param dspaceObject the object used.
      * @param request      the current request context.
      * @param currentUser  the current session's user.
+     *
      * @return a solr input document
+     *
      * @throws SQLException in case of a database exception
      */
     protected SolrInputDocument getCommonSolrDoc(DSpaceObject dspaceObject, HttpServletRequest request,
@@ -354,7 +379,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                     double latitude = location.getLocation().getLatitude();
                     double longitude = location.getLocation().getLongitude();
                     if (!(
-                            "--".equals(countryCode)
+                        "--".equals(countryCode)
                             && latitude == -180
                             && longitude == -180)
                     ) {
@@ -440,16 +465,16 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 double latitude = location.getLocation().getLatitude();
                 double longitude = location.getLocation().getLongitude();
                 if (!(
-                        "--".equals(countryCode)
-                                && latitude == -180
-                                && longitude == -180)
+                    "--".equals(countryCode)
+                        && latitude == -180
+                        && longitude == -180)
                 ) {
                     try {
                         doc1.addField("continent", LocationUtils
-                                .getContinentCode(countryCode));
+                            .getContinentCode(countryCode));
                     } catch (Exception e) {
                         System.out
-                                .println("COUNTRY ERROR: " + countryCode);
+                            .println("COUNTRY ERROR: " + countryCode);
                     }
                     doc1.addField("countryCode", countryCode);
                     doc1.addField("city", location.getCity().getName());
@@ -476,7 +501,6 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
 
         return doc1;
     }
-
 
     @Override
     public void postSearch(DSpaceObject resultObject, HttpServletRequest request, EPerson currentUser,
@@ -524,56 +548,74 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             throw re;
         } catch (Exception e) {
             log.error("Error saving SEARCH event to Solr by EPerson {}",
-                      currentUser.getEmail(), e);
+                currentUser.getEmail(), e);
         }
     }
 
     @Override
-    public void postWorkflow(UsageWorkflowEvent usageWorkflowEvent) throws SQLException {
-        initSolrYearCores();
-        try {
-            SolrInputDocument solrDoc = getCommonSolrDoc(usageWorkflowEvent.getObject(), null, null);
+    public void update(String query, String action,
+                       List<String> fieldNames, List<List<Object>> fieldValuesList, boolean commit)
+        throws SolrServerException, IOException {
 
-            //Log the current collection & the scope !
-            solrDoc.addField("owningColl", usageWorkflowEvent.getScope().getID().toString());
-            storeParents(solrDoc, usageWorkflowEvent.getScope());
+        // Since there is NO update
+        // We need to get our documents
+        // QueryResponse queryResponse = solr.query()//query(query, null, -1,
+        // null, null, null);
 
-            if (usageWorkflowEvent.getWorkflowStep() != null) {
-                solrDoc.addField("workflowStep", usageWorkflowEvent.getWorkflowStep());
+        List<SolrInputDocument> docsToUpdate = new ArrayList<>();
+
+        ResultProcessor processor = new ResultProcessor() {
+            @Override
+            public void process(SolrInputDocument document) {
+                docsToUpdate.add(document);
             }
-            if (usageWorkflowEvent.getOldState() != null) {
-                solrDoc.addField("previousWorkflowStep", usageWorkflowEvent.getOldState());
-            }
-            if (usageWorkflowEvent.getGroupOwners() != null) {
-                for (int i = 0; i < usageWorkflowEvent.getGroupOwners().length; i++) {
-                    Group group = usageWorkflowEvent.getGroupOwners()[i];
-                    solrDoc.addField("owner", "g" + group.getID().toString());
+        };
+
+        processor.execute(query);
+
+        // Add the new (updated onces
+        for (SolrInputDocument solrDocument : docsToUpdate) {
+            // Delete the document from the solr client
+            solr.deleteByQuery("uid:" + solrDocument.getFieldValue("uid"));
+
+            // Now loop over our fieldname actions
+            for (int j = 0; j < fieldNames.size(); j++) {
+                String fieldName = fieldNames.get(j);
+                List<Object> fieldValues = fieldValuesList.get(j);
+
+                if (action.equals("addOne") || action.equals("replace")) {
+                    if (action.equals("replace")) {
+                        solrDocument.removeField(fieldName);
+                    }
+
+                    for (Object fieldValue : fieldValues) {
+                        solrDocument.addField(fieldName, fieldValue);
+                    }
+                } else if (action.equals("remOne")) {
+                    // Remove the field
+                    java.util.Collection<Object> values = solrDocument
+                        .getFieldValues(fieldName);
+                    solrDocument.removeField(fieldName);
+                    for (Object value : values) {
+                        // Keep all the values besides the one we need to remove
+                        if (!fieldValues.contains((value))) {
+                            solrDocument.addField(fieldName, value);
+                        }
+                    }
                 }
             }
-            if (usageWorkflowEvent.getEpersonOwners() != null) {
-                for (int i = 0; i < usageWorkflowEvent.getEpersonOwners().length; i++) {
-                    EPerson ePerson = usageWorkflowEvent.getEpersonOwners()[i];
-                    solrDoc.addField("owner", "e" + ePerson.getID().toString());
-                }
-            }
 
-            solrDoc.addField("workflowItemId", usageWorkflowEvent.getWorkflowItem().getID().toString());
+            // see https://stackoverflow.com/questions/26941260/normalizing-solr-records-for-sharding-version-issues
+            solrDocument.removeField("_version_");
 
-            EPerson submitter = ((Item) usageWorkflowEvent.getObject()).getSubmitter();
-            if (submitter != null) {
-                solrDoc.addField("submitter", submitter.getID().toString());
-            }
-            solrDoc.addField("statistics_type", StatisticsType.WORKFLOW.text());
-            if (usageWorkflowEvent.getActor() != null) {
-                solrDoc.addField("actor", usageWorkflowEvent.getActor().getID().toString());
-            }
+            solr.add(solrDocument);
 
-            solr.add(solrDoc);
-        } catch (Exception e) {
-            //Log the exception, no need to send it through, the workflow shouldn't crash because of this !
-            log.error("Error saving WORKFLOW event to Solr", e);
+            if (commit) {
+                commit();
+            }
         }
-
+        // System.out.println("SolrLogger.update(\""+query+"\"):"+(new
+        // Date().getTime() - start)+"ms,"+numbFound+"records");
     }
 
     @Override
@@ -628,7 +670,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     @Override
     public Map<String, List<String>> queryField(String query,
                                                 List oldFieldVals, String field)
-            throws IOException {
+        throws IOException {
         Map<String, List<String>> currentValsStored = new HashMap<>();
         try {
             // Get one document (since all the metadata for all the values
@@ -647,81 +689,6 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         }
         return currentValsStored;
     }
-
-
-    public class ResultProcessor {
-
-        private SolrInputDocument toSolrInputDocument(SolrDocument d) {
-            SolrInputDocument doc = new SolrInputDocument();
-
-            for (String name : d.getFieldNames()) {
-                doc.addField(name, d.getFieldValue(name));
-            }
-
-            return doc;
-        }
-
-        public void execute(String query) throws SolrServerException, IOException {
-            Map<String, String> params = new HashMap<>();
-            params.put("q", query);
-            params.put("rows", "10");
-            if (0 < statisticYearCores.size()) {
-                params.put(ShardParams.SHARDS, StringUtils.join(statisticYearCores.iterator(), ','));
-            }
-            MapSolrParams solrParams = new MapSolrParams(params);
-            QueryResponse response = solr.query(solrParams);
-
-            SolrDocumentList results = response.getResults();
-            long numbFound = results.getNumFound();
-
-            // process the first batch
-            for (SolrDocument result : results) {
-                process(toSolrInputDocument(result));
-            }
-
-            // Run over the rest
-            for (int i = 10; i < numbFound; i += 10) {
-                params.put("start", String.valueOf(i));
-                solrParams = new MapSolrParams(params);
-                response = solr.query(solrParams);
-                results = response.getResults();
-                for (SolrDocument result : results) {
-                    process(toSolrInputDocument(result));
-                }
-            }
-
-        }
-
-        public void commit() throws IOException, SolrServerException {
-            solr.commit();
-        }
-
-        /**
-         * Override to manage pages of documents
-         *
-         * @param docs a list of Solr documents
-         * @throws IOException         A general class of exceptions produced by failed or interrupted I/O operations.
-         * @throws SolrServerException Exception from the Solr server to the solrj Java client.
-         */
-        public void process(List<SolrInputDocument> docs) throws IOException, SolrServerException {
-            for (SolrInputDocument doc : docs) {
-                process(doc);
-            }
-        }
-
-        /**
-         * Override to manage individual documents
-         *
-         * @param doc Solr document
-         * @throws IOException         A general class of exceptions produced by failed or interrupted I/O operations.
-         * @throws SolrServerException Exception from the Solr server to the solrj Java client.
-         */
-        public void process(SolrInputDocument doc) throws IOException, SolrServerException {
-
-
-        }
-    }
-
 
     @Override
     public void markRobotsByIP() {
@@ -810,76 +777,45 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     }
 
     @Override
-    public void update(String query, String action,
-                       List<String> fieldNames, List<List<Object>> fieldValuesList, boolean commit)
-            throws SolrServerException, IOException {
+    public ObjectCount[] queryFacetDate(String query,
+                                        String filterQuery, int max, String dateType, String dateStart,
+                                        String dateEnd, boolean showTotal, Context context, int facetMinCount)
+        throws SolrServerException, IOException {
+        QueryResponse queryResponse = query(query, filterQuery, null, 0, max,
+            dateType, dateStart, dateEnd, null, null, false, facetMinCount);
+        if (queryResponse == null) {
+            return new ObjectCount[0];
+        }
 
-        // Since there is NO update
-        // We need to get our documents
-        // QueryResponse queryResponse = solr.query()//query(query, null, -1,
-        // null, null, null);
-
-        List<SolrInputDocument> docsToUpdate = new ArrayList<>();
-
-        ResultProcessor processor = new ResultProcessor() {
-            @Override
-            public void process(SolrInputDocument document) {
-                docsToUpdate.add(document);
-            }
-        };
-
-        processor.execute(query);
-
-        // Add the new (updated onces
-        for (int i = 0; i < docsToUpdate.size(); i++) {
-            SolrInputDocument solrDocument = docsToUpdate.get(i);
-
-            // Delete the document from the solr client
-            solr.deleteByQuery("uid:" + solrDocument.getFieldValue("uid"));
-
-            // Now loop over our fieldname actions
-            for (int j = 0; j < fieldNames.size(); j++) {
-                String fieldName = fieldNames.get(j);
-                List<Object> fieldValues = fieldValuesList.get(j);
-
-                if (action.equals("addOne") || action.equals("replace")) {
-                    if (action.equals("replace")) {
-                        solrDocument.removeField(fieldName);
-                    }
-
-                    for (Object fieldValue : fieldValues) {
-                        solrDocument.addField(fieldName, fieldValue);
-                    }
-                } else if (action.equals("remOne")) {
-                    // Remove the field
-                    java.util.Collection<Object> values = solrDocument
-                        .getFieldValues(fieldName);
-                    solrDocument.removeField(fieldName);
-                    for (Object value : values) {
-                        // Keep all the values besides the one we need to remove
-                        if (!fieldValues.contains((value))) {
-                            solrDocument.addField(fieldName, value);
-                        }
-                    }
+        List<RangeFacet> rangeFacets = queryResponse.getFacetRanges();
+        for (RangeFacet rangeFacet : rangeFacets) {
+            if (rangeFacet.getName().equalsIgnoreCase("time")) {
+                // Create an array for our result
+                ObjectCount[] result = new ObjectCount[rangeFacet.getCounts().size()
+                    + (showTotal ? 1 : 0)];
+                // Run over our datefacet & store all the values
+                for (int i = 0; i < rangeFacet.getCounts().size(); i++) {
+                    RangeFacet.Count dateCount = (RangeFacet.Count) rangeFacet.getCounts().get(i);
+                    result[i] = new ObjectCount();
+                    result[i].setCount(dateCount.getCount());
+                    result[i].setValue(getDateView(dateCount.getValue(), dateType, context));
                 }
-            }
-
-            // see https://stackoverflow.com/questions/26941260/normalizing-solr-records-for-sharding-version-issues
-            solrDocument.removeField("_version_");
-
-            solr.add(solrDocument);
-
-            if (commit) {
-                commit();
+                if (showTotal) {
+                    result[result.length - 1] = new ObjectCount();
+                    result[result.length - 1].setCount(queryResponse.getResults()
+                        .getNumFound());
+                    // TODO: Make sure that this total is gotten out of the msgs.xml
+                    result[result.length - 1].setValue("total");
+                }
+                return result;
             }
         }
-        // System.out.println("SolrLogger.update(\""+query+"\"):"+(new
-        // Date().getTime() - start)+"ms,"+numbFound+"records");
+        return new ObjectCount[0];
     }
 
     @Override
     public void query(String query, int max, int facetMinCount)
-            throws SolrServerException, IOException {
+        throws SolrServerException, IOException {
         query(query, null, null, 0, max, null, null, null, null, null, false, facetMinCount);
     }
 
@@ -887,9 +823,9 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     public ObjectCount[] queryFacetField(String query,
                                          String filterQuery, String facetField, int max, boolean showTotal,
                                          List<String> facetQueries, int facetMinCount)
-            throws SolrServerException, IOException {
+        throws SolrServerException, IOException {
         QueryResponse queryResponse = query(query, filterQuery, facetField,
-                                            0, max, null, null, null, facetQueries, null, false, facetMinCount);
+            0, max, null, null, null, facetQueries, null, false, facetMinCount);
         if (queryResponse == null) {
             return new ObjectCount[0];
         }
@@ -910,7 +846,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             if (showTotal) {
                 result[result.length - 1] = new ObjectCount();
                 result[result.length - 1].setCount(queryResponse.getResults()
-                                                                .getNumFound());
+                    .getNumFound());
                 result[result.length - 1].setValue("total");
             }
             return result;
@@ -920,66 +856,8 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         }
     }
 
-    @Override
-    public ObjectCount[] queryFacetDate(String query,
-                                        String filterQuery, int max, String dateType, String dateStart,
-                                        String dateEnd, boolean showTotal, Context context, int facetMinCount)
-            throws SolrServerException, IOException {
-        QueryResponse queryResponse = query(query, filterQuery, null, 0, max,
-                                            dateType, dateStart, dateEnd, null, null, false, facetMinCount);
-        if (queryResponse == null) {
-            return new ObjectCount[0];
-        }
-
-        List<RangeFacet> rangeFacets = queryResponse.getFacetRanges();
-        for (RangeFacet rangeFacet: rangeFacets) {
-            if (rangeFacet.getName().equalsIgnoreCase("time")) {
-                RangeFacet timeFacet = rangeFacet;
-                // Create an array for our result
-                ObjectCount[] result = new ObjectCount[timeFacet.getCounts().size()
-                                                       + (showTotal ? 1 : 0)];
-                // Run over our datefacet & store all the values
-                for (int i = 0; i < timeFacet.getCounts().size(); i++) {
-                    RangeFacet.Count dateCount = (RangeFacet.Count) timeFacet.getCounts().get(i);
-                    result[i] = new ObjectCount();
-                    result[i].setCount(dateCount.getCount());
-                    result[i].setValue(getDateView(dateCount.getValue(), dateType, context));
-                }
-                if (showTotal) {
-                    result[result.length - 1] = new ObjectCount();
-                    result[result.length - 1].setCount(queryResponse.getResults()
-                                                                    .getNumFound());
-                    // TODO: Make sure that this total is gotten out of the msgs.xml
-                    result[result.length - 1].setValue("total");
-                }
-                return result;
-            }
-        }
-        return new ObjectCount[0];
-    }
-
-    @Override
-    public Map<String, Integer> queryFacetQuery(String query, String filterQuery, List<String> facetQueries,
-                                                int facetMinCount)
-        throws SolrServerException, IOException {
-        QueryResponse response = query(query, filterQuery, null, 0, 1, null, null,
-                                       null, facetQueries, null, false, facetMinCount);
-        return response.getFacetQuery();
-    }
-
-    @Override
-    public ObjectCount queryTotal(String query, String filterQuery, int facetMinCount)
-        throws SolrServerException, IOException {
-        QueryResponse queryResponse = query(query, filterQuery, null, 0, -1, null,
-                                            null, null, null, null, false, facetMinCount);
-        ObjectCount objCount = new ObjectCount();
-        objCount.setCount(queryResponse.getResults().getNumFound());
-
-        return objCount;
-    }
-
     protected String getDateView(String name, String type, Context context) {
-        if (name != null && name.matches("^[0-9]{4}\\-[0-9]{2}.*")) {
+        if (name != null && name.matches("^[0-9]{4}-[0-9]{2}.*")) {
             /*
              * if ("YEAR".equalsIgnoreCase(type)) return name.substring(0, 4);
              * else if ("MONTH".equalsIgnoreCase(type)) return name.substring(0,
@@ -1024,20 +902,30 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     }
 
     @Override
-    public QueryResponse query(String query, String filterQuery, String facetField, int rows, int max, String dateType,
-                               String dateStart, String dateEnd, List<String> facetQueries, String sort,
-                               boolean ascending, int facetMinCount)
-            throws SolrServerException, IOException {
+    public Map<String, Integer> queryFacetQuery(String query, String filterQuery, List<String> facetQueries,
+                                                int facetMinCount)
+        throws SolrServerException, IOException {
+        QueryResponse response = query(query, filterQuery, null, 0, 1, null, null,
+            null, facetQueries, null, false, facetMinCount);
+        return response.getFacetQuery();
+    }
 
-        return query(query, filterQuery, facetField, rows, max, dateType, dateStart, dateEnd, facetQueries, sort,
-                ascending, facetMinCount, true);
+    @Override
+    public ObjectCount queryTotal(String query, String filterQuery, int facetMinCount)
+        throws SolrServerException, IOException {
+        QueryResponse queryResponse = query(query, filterQuery, null, 0, -1, null,
+            null, null, null, null, false, facetMinCount);
+        ObjectCount objCount = new ObjectCount();
+        objCount.setCount(queryResponse.getResults().getNumFound());
+
+        return objCount;
     }
 
     @Override
     public QueryResponse query(String query, String filterQuery, String facetField, int rows, int max, String dateType,
                                String dateStart, String dateEnd, List<String> facetQueries, String sort,
                                boolean ascending, int facetMinCount, boolean defaultFilterQueries)
-            throws SolrServerException, IOException {
+        throws SolrServerException, IOException {
 
         if (solr == null) {
             return null;
@@ -1045,26 +933,25 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
 
         // System.out.println("QUERY");
         SolrQuery solrQuery = new SolrQuery().setRows(rows).setQuery(query)
-                                             .setFacetMinCount(facetMinCount);
+            .setFacetMinCount(facetMinCount);
         addAdditionalSolrYearCores(solrQuery);
 
         // Set the date facet if present
         if (dateType != null) {
             solrQuery.setParam("facet.range", "time")
-                .
+                    .
                 // EXAMPLE: NOW/MONTH+1MONTH
                     setParam("f.time.facet.range.end",
-                             "NOW/" + dateType + dateEnd + dateType).setParam(
-                "f.time.facet.range.gap", "+1" + dateType)
-                .
+                    "NOW/" + dateType + dateEnd + dateType).setParam(
+                    "f.time.facet.range.gap", "+1" + dateType)
+                    .
                 // EXAMPLE: NOW/MONTH-" + nbMonths + "MONTHS
                     setParam("f.time.facet.range.start",
-                             "NOW/" + dateType + dateStart + dateType + "S")
+                    "NOW/" + dateType + dateStart + dateType + "S")
                 .setFacet(true);
         }
         if (facetQueries != null) {
-            for (int i = 0; i < facetQueries.size(); i++) {
-                String facetQuery = facetQueries.get(i);
+            for (String facetQuery : facetQueries) {
                 solrQuery.addFacetQuery(facetQuery);
             }
             if (0 < facetQueries.size()) {
@@ -1087,14 +974,14 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
 
         // Choose to filter by the Legacy spider IP list (may get too long to properly filter all IP's
         if (defaultFilterQueries && configurationService.getBooleanProperty(
-                "solr-statistics.query.filter.spiderIp", false)) {
+            "solr-statistics.query.filter.spiderIp", false)) {
             solrQuery.addFilterQuery(getIgnoreSpiderIPs());
         }
 
         // Choose to filter by isBot field, may be overriden in future
         // to allow views on stats based on bots.
         if (defaultFilterQueries && configurationService.getBooleanProperty(
-                "solr-statistics.query.filter.isBot", true)) {
+            "solr-statistics.query.filter.isBot", true)) {
             solrQuery.addFilterQuery("-isBot:true");
         }
 
@@ -1140,11 +1027,29 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         return response;
     }
 
+    @Override
+    public QueryResponse query(String query, String filterQuery, String facetField, int rows, int max, String dateType,
+                               String dateStart, String dateEnd, List<String> facetQueries, String sort,
+                               boolean ascending, int facetMinCount)
+        throws SolrServerException, IOException {
 
-    /**
-     * String of IP and Ranges in IPTable as a Solr Query
-     */
-    protected String filterQuery = null;
+        return query(query, filterQuery, facetField, rows, max, dateType, dateStart, dateEnd, facetQueries, sort,
+            ascending, facetMinCount, true);
+    }
+
+    @Override
+    public void optimizeSOLR() {
+        try {
+            long start = System.currentTimeMillis();
+            System.out.println("SOLR Optimize -- Process Started:" + start);
+            solr.optimize();
+            long finish = System.currentTimeMillis();
+            System.out.println("SOLR Optimize -- Process Finished:" + finish);
+            System.out.println("SOLR Optimize -- Total time taken:" + (finish - start) + " (ms).");
+        } catch (SolrServerException | IOException sse) {
+            System.err.println(sse.getMessage());
+        }
+    }
 
     @Override
     public String getIgnoreSpiderIPs() {
@@ -1167,22 +1072,6 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     }
 
     @Override
-    public void optimizeSOLR() {
-        try {
-            long start = System.currentTimeMillis();
-            System.out.println("SOLR Optimize -- Process Started:" + start);
-            solr.optimize();
-            long finish = System.currentTimeMillis();
-            System.out.println("SOLR Optimize -- Process Finished:" + finish);
-            System.out.println("SOLR Optimize -- Total time taken:" + (finish - start) + " (ms).");
-        } catch (SolrServerException sse) {
-            System.err.println(sse.getMessage());
-        } catch (IOException ioe) {
-            System.err.println(ioe.getMessage());
-        }
-    }
-
-    @Override
     public void shardSolrIndex() throws IOException, SolrServerException {
         if (!(solr instanceof HttpSolrClient)) {
             return;
@@ -1199,7 +1088,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         //We go back to 2000 the year 2000, this is a bit overkill but this way we ensure we have everything
         //The alternative would be to sort but that isn't recommended since it would be a very costly query !
         yearRangeQuery.add(FacetParams.FACET_RANGE_START,
-                           "NOW/YEAR-" + (Calendar.getInstance().get(Calendar.YEAR) - 2000) + "YEARS");
+            "NOW/YEAR-" + (Calendar.getInstance().get(Calendar.YEAR) - 2000) + "YEARS");
         //Add the +0year to ensure that we DO NOT include the current year
         yearRangeQuery.add(FacetParams.FACET_RANGE_END, "NOW/YEAR+0YEARS");
         yearRangeQuery.add(FacetParams.FACET_RANGE_GAP, "+1YEAR");
@@ -1263,13 +1152,13 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 HttpGet get = new HttpGet(solrRequestUrl);
                 InputStream csvInputstream;
                 File csvFile = new File(tempDirectory.getPath()
-                        + File.separatorChar
-                        + "temp."
-                        + dcStart.getYearUTC()
-                        + "."
-                        + i
-                        + ".csv");
-                try ( CloseableHttpClient hc = HttpClientBuilder.create().build(); ) {
+                    + File.separatorChar
+                    + "temp."
+                    + dcStart.getYearUTC()
+                    + "."
+                    + i
+                    + ".csv");
+                try (CloseableHttpClient hc = HttpClientBuilder.create().build()) {
                     HttpResponse response = hc.execute(get);
                     csvInputstream = response.getEntity().getContent();
                     //Write the csv ouput to a file !
@@ -1317,7 +1206,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
     }
 
     protected HttpSolrClient createCore(HttpSolrClient solr, String coreName)
-            throws IOException, SolrServerException {
+        throws IOException, SolrServerException {
         String baseSolrUrl = solr.getBaseURL().replace(statisticsCoreBase, ""); // Has trailing slash
 
         //DS-3458: Test to see if a solr core already exists.  If it exists,
@@ -1327,11 +1216,11 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         try {
             SolrPingResponse ping = returnServer.ping();
             log.debug("Ping of Solr Core {} returned with Status {}",
-                    coreName, ping.getStatus());
+                coreName, ping.getStatus());
             return returnServer;
-        } catch (IOException | RemoteSolrException | SolrServerException e) {
+        } catch (IOException | BaseHttpSolrClient.RemoteSolrException | SolrServerException e) {
             log.debug("Ping of Solr Core {} failed with {}.  New Core Will be Created",
-                    coreName, e.getClass().getName());
+                coreName, e.getClass().getName());
         }
 
         //Unfortunately, this class is documented as "experimental and subject to change" on the Lucene website.
@@ -1339,7 +1228,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         CoreAdminRequest.Create create = new CoreAdminRequest.Create();
         create.setCoreName(coreName);
         String configSetName = configurationService
-                .getProperty("solr-statistics.configset", "statistics");
+            .getProperty("solr-statistics.configset", "statistics");
         create.setConfigSet(configSetName);
         create.setInstanceDir(coreName);
 
@@ -1348,32 +1237,6 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         log.info("Created core with name: {} from configset {}", coreName, configSetName);
         return returnServer;
     }
-
-    /**
-     * Retrieves a list of all the multi valued fields in the solr core.
-     *
-     * @return all fields tagged as multivalued
-     * @throws SolrServerException When getting the schema information from the SOLR core fails
-     * @throws IOException         When connection to the SOLR server fails
-     */
-    public Set<String> getMultivaluedFieldNames() throws SolrServerException, IOException {
-        Set<String> multivaluedFields = new HashSet<>();
-        LukeRequest lukeRequest = new LukeRequest();
-        lukeRequest.setShowSchema(true);
-        LukeResponse process = lukeRequest.process(solr);
-        Map<String, LukeResponse.FieldInfo> fields = process.getFieldInfo();
-        for (String fieldName : fields.keySet()) {
-            LukeResponse.FieldInfo fieldInfo = fields.get(fieldName);
-            EnumSet<FieldFlag> flags = fieldInfo.getFlags();
-            for (FieldFlag fieldFlag : flags) {
-                if (fieldFlag.getAbbreviation() == FieldFlag.MULTI_VALUED.getAbbreviation()) {
-                    multivaluedFields.add(fieldName);
-                }
-            }
-        }
-        return multivaluedFields;
-    }
-
 
     @Override
     public void reindexBitstreamHits(boolean removeDeletedBitstreams) throws Exception {
@@ -1411,7 +1274,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
 
                 HttpGet get = new HttpGet(solrRequestUrl);
                 List<String[]> rows;
-                try ( CloseableHttpClient hc = HttpClientBuilder.create().build(); ) {
+                try (CloseableHttpClient hc = HttpClientBuilder.create().build()) {
                     HttpResponse response = hc.execute(get);
                     InputStream csvOutput = response.getEntity().getContent();
                     Reader csvReader = new InputStreamReader(csvOutput);
@@ -1433,7 +1296,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 //csvp.setAlwaysQuote(false);
 
                 //Write the header !
-                csvp.writeNext((String[]) ArrayUtils.add(header, "bundleName"));
+                csvp.writeNext(ArrayUtils.add(header, "bundleName"));
                 Map<String, String> bitBundleCache = new HashMap<>();
                 //Loop over each line (skip the headers though)!
                 for (int j = 1; j < csvParsed.length; j++) {
@@ -1472,7 +1335,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                             bundleName = "BITSTREAM_DELETED";
                         }
                     }
-                    csvp.writeNext((String[]) ArrayUtils.add(csvLine, bundleName));
+                    csvp.writeNext(ArrayUtils.add(csvLine, bundleName));
                 }
 
                 //Loop over our parsed csv
@@ -1504,6 +1367,31 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         }
     }
 
+    /**
+     * Retrieves a list of all the multi valued fields in the solr core.
+     *
+     * @return all fields tagged as multivalued
+     *
+     * @throws SolrServerException When getting the schema information from the SOLR core fails
+     * @throws IOException         When connection to the SOLR server fails
+     */
+    public Set<String> getMultivaluedFieldNames() throws SolrServerException, IOException {
+        Set<String> multivaluedFields = new HashSet<>();
+        LukeRequest lukeRequest = new LukeRequest();
+        lukeRequest.setShowSchema(true);
+        LukeResponse process = lukeRequest.process(solr);
+        Map<String, LukeResponse.FieldInfo> fields = process.getFieldInfo();
+        for (String fieldName : fields.keySet()) {
+            LukeResponse.FieldInfo fieldInfo = fields.get(fieldName);
+            EnumSet<FieldFlag> flags = fieldInfo.getFlags();
+            for (FieldFlag fieldFlag : flags) {
+                if (fieldFlag.getAbbreviation() == FieldFlag.MULTI_VALUED.getAbbreviation()) {
+                    multivaluedFields.add(fieldName);
+                }
+            }
+        }
+        return multivaluedFields;
+    }
 
     @Override
     public void exportHits() throws Exception {
@@ -1538,7 +1426,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 //export docs
                 addDocumentsToFile(context, docs, exportOutput);
                 System.out.println(
-                    "Export hits [" + i + " - " + String.valueOf(i + 9999) + "] to " + exportOutput.getCanonicalPath());
+                    "Export hits [" + i + " - " + (i + 9999) + "] to " + exportOutput.getCanonicalPath());
             }
         } catch (Exception e) {
             log.error("Error while exporting SOLR data", e);
@@ -1546,11 +1434,6 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         } finally {
             context.abort();
         }
-    }
-
-    @Override
-    public void commit() throws IOException, SolrServerException {
-        solr.commit();
     }
 
     protected void addDocumentsToFile(Context context, SolrDocumentList docs, File exportOutput)
@@ -1566,7 +1449,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             String time = doc.get("time").toString();
 
             //20140527162409835,view_bitstream,1292,2014-05-27T16:24:09,anonymous,127.0.0.1
-            DSpaceObjectLegacySupportService dsoService = contentServiceFactory
+            DSpaceObjectLegacySupportService<? extends DSpaceObject> dsoService = contentServiceFactory
                 .getDSpaceLegacyObjectService(Integer.parseInt(type));
             DSpaceObject dso = dsoService.findByIdOrLegacyId(context, id);
             if (dso == null) {
@@ -1582,13 +1465,18 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
             DateFormat outputDateFormat = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss");
 
             String out = time + "," + "view_" + contentServiceFactory.getDSpaceObjectService(dso).getTypeText(dso)
-                                                                     .toLowerCase() + "," + id + "," + outputDateFormat
+                .toLowerCase() + "," + id + "," + outputDateFormat
                 .format(solrDate) + ",anonymous," + ip + "\n";
             FileUtils.writeStringToFile(exportOutput, out, StandardCharsets.UTF_8, true);
         }
     }
 
-    protected String generateURL(String baseURL, Map<String, String> parameters) throws UnsupportedEncodingException {
+    @Override
+    public void commit() throws IOException, SolrServerException {
+        solr.commit();
+    }
+
+    protected String generateURL(String baseURL, Map<String, String> parameters) {
         boolean first = true;
         StringBuilder result = new StringBuilder(baseURL);
         for (String key : parameters.keySet()) {
@@ -1599,20 +1487,10 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 result.append("&");
             }
 
-            result.append(key).append("=").append(URLEncoder.encode(parameters.get(key), "UTF-8"));
+            result.append(key).append("=").append(URLEncoder.encode(parameters.get(key), StandardCharsets.UTF_8));
         }
 
         return result.toString();
-    }
-
-    protected void addAdditionalSolrYearCores(SolrQuery solrQuery) {
-        //Only add if needed
-        initSolrYearCores();
-        if (0 < statisticYearCores.size()) {
-            //The shards are a comma separated list of the urls to the cores
-            solrQuery.add(ShardParams.SHARDS, StringUtils.join(statisticYearCores.iterator(), ","));
-        }
-
     }
 
     /*
@@ -1631,7 +1509,7 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
         //Base url should like : http://localhost:{port.number}/solr
         String baseSolrUrl = ((HttpSolrClient) solr).getBaseURL().replace(statisticsCoreBase, "");
 
-        try (HttpSolrClient enumClient = new HttpSolrClient.Builder(baseSolrUrl).build();) {
+        try (HttpSolrClient enumClient = new HttpSolrClient.Builder(baseSolrUrl).build()) {
             //Attempt to retrieve all the statistic year cores
             CoreAdminRequest coresRequest = new CoreAdminRequest();
             coresRequest.setAction(CoreAdminAction.STATUS);
@@ -1650,31 +1528,134 @@ public class SolrLoggerServiceImpl implements SolrLoggerService, InitializingBea
                 log.info("Loading core with name: " + statCoreName);
 
                 createCore((HttpSolrClient) solr, statCoreName);
-                //Add it to our cores list so we can query it !
+                //Add it to our cores list, so we can query it !
                 statisticYearCores
-                    .add(baseSolrUrl.replace("http://", "").replace("https://", "") + statCoreName);
+                    .add(baseSolrUrl.replace("http://", "").replace("https://", "")
+                        + statCoreName);
             }
             //Also add the core containing the current year !
             statisticYearCores.add(((HttpSolrClient) solr)
-                    .getBaseURL()
-                    .replace("http://", "")
-                    .replace("https://", ""));
+                .getBaseURL()
+                .replace("http://", "")
+                .replace("https://", ""));
         } catch (IOException | SolrServerException e) {
             log.error(e.getMessage(), e);
         }
         statisticYearCoresInit = true;
     }
 
+    protected void addAdditionalSolrYearCores(SolrQuery solrQuery) {
+        //Only add if needed
+        initSolrYearCores();
+        if (0 < statisticYearCores.size()) {
+            //The shards are a comma separated list of the urls to the cores
+            solrQuery.add(ShardParams.SHARDS, StringUtils.join(statisticYearCores.iterator(), ","));
+        }
+
+    }
+
     public Object anonymizeIp(String ip) throws UnknownHostException {
         InetAddress address = InetAddress.getByName(ip);
         if (address instanceof Inet4Address) {
             return ip.replaceFirst(IP_V4_REGEX, "$1" + configurationService.getProperty(
-                    "anonymize_statistics.ip_v4_mask", "255"));
+                "anonymize_statistics.ip_v4_mask", "255"));
         } else if (address instanceof Inet6Address) {
             return ip.replaceFirst(IP_V6_REGEX, "$1:" + configurationService.getProperty(
-                    "anonymize_statistics.ip_v6_mask", "FFFF:FFFF"));
+                "anonymize_statistics.ip_v6_mask", "FFFF:FFFF"));
         }
 
         throw new UnknownHostException("unknown ip format");
+    }
+
+    public enum StatisticsType {
+        VIEW("view"),
+        SEARCH("search"),
+        SEARCH_RESULT("search_result"),
+        WORKFLOW("workflow");
+
+        private final String text;
+
+        StatisticsType(String text) {
+            this.text = text;
+        }
+
+        public String text() {
+            return text;
+        }
+    }
+
+    public class ResultProcessor {
+
+        private SolrInputDocument toSolrInputDocument(SolrDocument d) {
+            SolrInputDocument doc = new SolrInputDocument();
+
+            for (String name : d.getFieldNames()) {
+                doc.addField(name, d.getFieldValue(name));
+            }
+
+            return doc;
+        }
+
+        public void execute(String query) throws SolrServerException, IOException {
+            Map<String, String> params = new HashMap<>();
+            params.put("q", query);
+            params.put("rows", "10");
+            if (0 < statisticYearCores.size()) {
+                params.put(ShardParams.SHARDS, StringUtils.join(statisticYearCores.iterator(), ','));
+            }
+            MapSolrParams solrParams = new MapSolrParams(params);
+            QueryResponse response = solr.query(solrParams);
+
+            SolrDocumentList results = response.getResults();
+            long numbFound = results.getNumFound();
+
+            // process the first batch
+            for (SolrDocument result : results) {
+                process(toSolrInputDocument(result));
+            }
+
+            // Run over the rest
+            for (int i = 10; i < numbFound; i += 10) {
+                params.put("start", String.valueOf(i));
+                solrParams = new MapSolrParams(params);
+                response = solr.query(solrParams);
+                results = response.getResults();
+                for (SolrDocument result : results) {
+                    process(toSolrInputDocument(result));
+                }
+            }
+
+        }
+
+        public void commit() throws IOException, SolrServerException {
+            solr.commit();
+        }
+
+        /**
+         * Override to manage pages of documents
+         *
+         * @param docs a list of Solr documents
+         *
+         * @throws IOException         A general class of exceptions produced by failed or interrupted I/O operations.
+         * @throws SolrServerException Exception from the Solr server to the solrj Java client.
+         */
+        public void process(List<SolrInputDocument> docs) throws IOException, SolrServerException {
+            for (SolrInputDocument doc : docs) {
+                process(doc);
+            }
+        }
+
+        /**
+         * Override to manage individual documents
+         *
+         * @param doc Solr document
+         *
+         * @throws IOException         A general class of exceptions produced by failed or interrupted I/O operations.
+         * @throws SolrServerException Exception from the Solr server to the solrj Java client.
+         */
+        public void process(SolrInputDocument doc) throws IOException, SolrServerException {
+
+
+        }
     }
 }
